...
				}}>
				<Tabs.Screen
					name="(home)"
					options={{
						title: t('home'),
						tabBarIcon: ({ color }) => (
							<FontAwesome5 color={color} name="react" size={iconSizes.navigation} testID="TabBar.Home" />
						),
					}}
				/>
				<Tabs.Screen
					name="(demo)"
					options={{
						title: t('demo'),
						tabBarIcon: ({ color }) => (
							<FontAwesome6 color={color} name="circle-notch" size={iconSizes.navigation} testID="TabBar.Demo" />
						),
					}}
				/>
			</Tabs>
		</ErrorBoundary>
	)
...
